--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ header {
     height: 300px;
     color: rgb(255, 255, 0);
     font-size: 22px;
+    text-align: center;
     }
 
 .containerUp {  
