--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@
     padding: 20px;
     width: 70%;
     background-color: #666666e7;
-    height: 300px;
+    height: auto;
     color: rgb(0, 157, 255);
     font-size: 22px;
     text-align: center;
@@ -50,7 +50,7 @@
 .containerLeft {  
     float: left;
     width: 150px;
-    height: 1000px;;  
+    height: 1000px;  
     background-color: #66666694;
     display: flex;  
     justify-content: center;  
