--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,10 @@
 .bodyDark{
     /*background-image: url('assets/space.jpg');*/
-    background-repeat: no-repeat;
     background-color: #040404;
-    background-attachment: fixed;  
-    background-size: cover;
 }
 
 .bodyLight{
-    background-image: url('assets/sky.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;  
-    background-size: cover;
+    background-color: #e6e4e0;
 }
 
 .h1{
@@ -57,10 +51,10 @@
     background-color: #222222; 
     }
 
-.containerRight {  
+.containerRight {
     float: right;
     width: 150px;
-    height: 1000px;  
+    height: 1000px;
     background-color: #222222; 
     }
 
@@ -185,13 +179,11 @@
         border: 13px solid #0b1b97;
         height: 520px;
     }
-
     .likeBtn{
         display: flex;
         justify-content: center;
         align-items: center;
     }
-
     .likeBtn:active{
         transform: scale(0.9, 0.9);
     }
@@ -199,7 +191,7 @@
         animation: pop 0.6s 1;
     }
     .likeBtn path {
-        fill: #767676;
+        fill: #ffffff;
     }
     .likeBtn:active path{
         fill: #ec3e3e;
@@ -217,3 +209,30 @@
             transform: translate(0, 0)
         }
     }
+       
+              
+ *{
+    margin: 0;
+    padding: 0;
+}
+
+.btns{
+    position: absolute;
+    top: 216px;
+    left: 328px;
+    display: flex;
+
+}
+
+.btn{
+    background: transparent;
+    border: none;
+    margin: 87px;
+    font-size: 88px;
+    outline: none;
+    color: rgb(255, 255, 255);
+}
+
+.btn i:hover{
+    cursor: pointer;
+}
